--- a/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
+++ b/randtalkbot/locale/ru/LC_MESSAGES/randtalkbot.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: randtalkbot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-16 19:04+0300\n"
+"POT-Creation-Date: 2016-01-17 10:54+0300\n"
 "PO-Revision-Date: 2016-01-16 10:10+0300\n"
 "Last-Translator: Pyotr Ermishkin <quasiyoke@gmail.com>\n"
 "Language-Team: Russian\n"
@@ -42,15 +42,15 @@ msgid "Your partner has left chat. Feel free to /begin a new conversation."
 msgstr ""
 "Собеседник покинул чат. 😿 Чтобы начать новый разговор, скомандуйте /begin."
 
-#: build/lib/randtalkbot/stranger.py:160 randtalkbot/stranger.py:160
+#: build/lib/randtalkbot/stranger.py:160 randtalkbot/stranger.py:162
 msgid "Looking for a stranger for you."
 msgstr "Идет подбор партнера 🤔"
 
-#: build/lib/randtalkbot/stranger.py:169 randtalkbot/stranger.py:169
+#: build/lib/randtalkbot/stranger.py:169 randtalkbot/stranger.py:171
 msgid "Here's another stranger. Have fun!"
-msgstr ""
+msgstr "Подобран новый собеедник. Общайтесь на здоровье 🤗"
 
-#: build/lib/randtalkbot/stranger.py:173 randtalkbot/stranger.py:173
+#: build/lib/randtalkbot/stranger.py:173 randtalkbot/stranger.py:175
 msgid "Your partner is here. Have a nice chat!"
 msgstr "Собеседник найден. Приятного общения 🤗"
 
@@ -105,7 +105,7 @@ msgid "Messages of this type aren't supported."
 msgstr "Сообщения такого типа не поддерживаются 😞"
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:48
-#: randtalkbot/stranger_setup_wizard.py:48
+#: randtalkbot/stranger_setup_wizard.py:49
 msgid ""
 "Thank you. Use /begin to start looking for a conversational partner, once "
 "you're matched you can use /end to end the conversation."
@@ -115,7 +115,7 @@ msgstr ""
 "выполнив /end."
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:73
-#: randtalkbot/stranger_setup_wizard.py:73
+#: randtalkbot/stranger_setup_wizard.py:74
 #, python-brace-format
 msgid "Language \"{0}\" wasn't found."
 msgstr ""
@@ -125,7 +125,7 @@ msgstr ""
 "Language “{0}” wasn't found. Try to specify language in English."
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:78
-#: randtalkbot/stranger_setup_wizard.py:78
+#: randtalkbot/stranger_setup_wizard.py:79
 msgid "Please specify at least one language."
 msgstr ""
 "Укажите пожалуйста хоть один язык\n"
@@ -134,14 +134,14 @@ msgstr ""
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:91
 #: build/lib/randtalkbot/stranger_setup_wizard.py:109
-#: randtalkbot/stranger_setup_wizard.py:91
-#: randtalkbot/stranger_setup_wizard.py:109
+#: randtalkbot/stranger_setup_wizard.py:92
+#: randtalkbot/stranger_setup_wizard.py:110
 #, python-brace-format
 msgid "Unknown sex: \"{0}\" -- is not a valid sex name."
 msgstr "Непонятный пол: «{0}». Здесь точно нет никакой ошибки? 😉"
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:124
-#: randtalkbot/stranger_setup_wizard.py:124
+#: randtalkbot/stranger_setup_wizard.py:135
 msgid ""
 "Enumerate the languages you speak like this: \"English, Italian\" -- in "
 "descending order of your speaking convenience or just pick one at special "
@@ -156,7 +156,7 @@ msgstr ""
 "keyboard."
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:133
-#: randtalkbot/stranger_setup_wizard.py:133
+#: randtalkbot/stranger_setup_wizard.py:158
 msgid ""
 "Set up your sex. If you pick \"Not Specified\" you can't choose your "
 "partner's sex."
@@ -165,6 +165,44 @@ msgstr ""
 "указано»."
 
 #: build/lib/randtalkbot/stranger_setup_wizard.py:139
-#: randtalkbot/stranger_setup_wizard.py:139
+#: randtalkbot/stranger_setup_wizard.py:164
 msgid "Choose your partner's sex"
 msgstr "Выберите пол собеседника"
+
+#: randtalkbot/stranger_setup_wizard.py:140
+msgid "Leave the language unchanged"
+msgstr "Не менять язык"
+
+#: randtalkbot/stranger_setup_wizard.py:141
+#, python-brace-format
+msgid ""
+"Your current language is {0}. Enumerate the languages you speak like this: "
+"\"English, Italian\" -- in descending order of your speaking convenience or "
+"just pick one at special keyboard."
+msgstr ""
+"Сейчас установлен {0} язык. Перечислите языки, которыми вы владеете, в таком формате: "
+"«English, Italian» — в порядке убывания уровня ваших знаний или просто выберите ваш язык на "
+"специальной «клавиатуре».\n"
+"\n"
+"Your current language is {0}. Enumerate the languages you speak like this: "
+"“English, Italian” — in descending order of your speaking convenience or just pick one "
+"at special keyboard."
+
+#: randtalkbot/stranger_setup_wizard.py:145
+msgid "Leave the languages unchanged"
+msgstr "Не менять языки"
+
+#: randtalkbot/stranger_setup_wizard.py:146
+#, python-brace-format
+msgid ""
+"Your current languages are: {0}. Enumerate the languages you speak the same "
+"way -- in descending order of your speaking convenience or just pick one at "
+"special keyboard."
+msgstr ""
+"Сейчас выбраны следующие языки: {0}. Перечислите языки, которыми вы владеете, "
+"в таком же формате, в порядке убывания уровня ваших знаний или просто выберите "
+"ваш язык на специальной «клавиатуре».\n"
+"\n"
+"Your current languages are: {0}. Enumerate the languages you speak the same way, "
+"in descending order of your speaking convenience or just pick one "
+"at special keyboard."
